Reimplemented the pjax setup with event manager.

--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Phlacon + PJAX Experiment</title>
+		<title>Phalcon + PJAX Experiment</title>
 		
 		<link rel="stylesheet" href="/css/main.css">
 	</head>
